# testsync

./: .cirrus.yml  .gitignore  Cargo.toml  config.yaml  creds.json
src/: cell_id.rs  export.rs  import.rs  main.rs
