[package]
name = "shiitssync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
office = { version = "0.8.1" }
google-sheets4 = { version = "5.0" }
serde_json = { version = "1.0.79" }
tokio = { version = "1.17.0", features = ["full"] }
serde_yaml = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0.30" }
